--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,15 @@
   "projects": {
     "BookingApp": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:class": {
+          "style": "scss"
+        },
+        "@schematics/angular:component": {
+          "style": "scss",
+          "spec": false
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
