--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
@@ -75,7 +76,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "BookingApp:build"
+            "browserTarget": "BookingApp:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
